<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/temp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/time" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/DialogActionEdit_EditText_Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textSize="7pt" />

        <EditText
            android:id="@+id/DialogActionEdit_EditText_Temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textSize="7pt" />

        <EditText
            android:id="@+id/DialogActionEdit_EditText_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textSize="7pt" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/DialogActionEdit_CheckBox_GOTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/GOTO"
            android:textSize="7pt" />
    </LinearLayout>

</LinearLayout>